<resources>
    <string name="app_name">check</string>

    <!-- 로그인 창 !-->
    <string name="make_email">이메일을 입력해주세요.</string>
    <string name="password">비밀번호를 입력해주세요.(6자리 이상)</string>
    <string name="password_lable_image">암호라벨</string>
    <string name="join_login">회원가입</string>
    <string name="login">로그인</string>

    <!-- 회원가입 창 !-->
    <string name="text_email">사용하실 이메일을 입력해주세요.</string>
    <string name="text_name">자신의 이름을 입력해주세요.</string>
    <string name="text_password">사용하실 비밀번호를 입력해주세요.</string>
    <string name="login2">로그인</string>

    <!-- 학생 또는 선생님 버전을 선택하는 창 !-->
    <string name="choose_teacher">선생님</string>
    <string name="version">선생님 Version</string>
    <string name="choose_student">학생</string>
    <string name="version2">학생 Version</string>

    <!-- 선생님 메인창 !-->
    <string name="add">추가하기</string>
    <string name="show_code">""</string>
    <string name="teacher_name1">선생님</string>

    <!-- 수업코드로 입력하는 창 !-->
    <string name="class_name">수업 이름</string>
    <string name="class_cord">수업 코드</string>
    <string name="cancel">취소</string>
    <string name="class_join">들어가기</string>

    <!--회원정보를 수정하는 창 !-->
    <string name="modify_name">자신의 이름을 입력해주세요.</string>
    <string name="modify_email">자신의 이메일을 입력해주세요.</string>
    <string name="modify_password">자신의 비밀번호를 입력해주세요.</string>
    <string name="modify">저장하기</string>

    <!-- 밑에 있는 버튼을 통해 이동 할 수 있는 창!-->
    <string name="make_calendar">스케줄 생성</string>
    <string name="make_join">출석 확인</string>
    <string name="make_information">개인정보 수정</string>

</resources>